# pyberryplc

./: LICENSE.md  README.md  pyproject.toml
applications/arduino/: plc_motor_control.py  potmeter_test.py  serial_monitor.py
applications/led/: led_01.py  led_02.py
applications/servo/: servo_plc.py
applications/servo_remote/: servo_controller.py  servo_plc.py
applications/sprout_machine/: pouch_supply.py
examples/arduino/: arduino_sketch_backup.ino  plc_motor_control.py
examples/dc_motor/: dc_motor.py
examples/led/: led_02.py
examples/servo/: servo_plc.py  servo_simple.py  servo_test.py
examples/servo_remote/: servo_controller.py  servo_plc.py
examples/sprout_machine/: pouch_supply.py  servo_drive.py
examples/stepper_motor/: run_with_keyboard.sh  stepper_motor01.py  stepper_motor02.py  stepper_motor03.py  stepper_motor04.py  stepper_motor05.py  stepper_motor06.py  tmc2208_uart_debug.py  tmc2208_uart_debug_2.py  uart01.py  uart02.py  uart03.py
hmi_app/: app.py
hmi_app/templates/: index.html
pyberryplc/core/: plc.py
pyberryplc/motion_profiles/: __init__.py  delay_generator.py  kinematics.py  motion_profile.py
pyberryplc/stepper/: __init__.py
pyberryplc/stepper/driver/: base.py  base_old.py  tmc2208.py
pyberryplc/stepper/stepper_gpio/: __init__.py  a4988.py  base.py  tmc2208.py
pyberryplc/stepper/stepper_uart/: __init__.py  tmc2208_registers.py
rpi_plc/: __init__.py  counters.py  gpio.py  plc.py  remote_interface.py  socket_interface.py  switches.py  timers.py
rpi_plc/core/: __init__.py  plc.py
rpi_plc/stepper/: __init__.py  a4988.py  tmc2208.py
rpi_plc/stepper/stepper_gpio/: __init__.py  a4988.py  base.py  speed_profiles.py  tmc2208.py
(+3 files in other folders)
