[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyberryplc"
version = "0.1.0"
description = "PLC-programming with Python on Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"
authors = [{ name = "Tom Christiaens", email = "mailbox.tom.chr@gmail.com" }]
dependencies = [
    "python-decouple",
    "gpiozero",
    "pigpio",
    "pyserial",
    "numpy",
    "scipy",
    "flask",
    "flask-socketio",
    "eventlet"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Embedded Systems"
]

[tool.setuptools.packages.find]
where = ["."]
